# raytracing-csg-renderer

./: .editorconfig  .gitignore  Cargo.toml  README.md
assets/: quadratic-test.json  roman-surface.json  test.json  test.toml  test.yaml  torus.json
core/src/: lib.rs
core/src/types/: math.rs  mod.rs  rt.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/core/src/types/: math.rs  rt.rs
lib/long-double/: Cargo.toml  build.rs  long_double.c  long_double.h
lib/long-double/src/: lib.rs
lib/main/: Cargo.toml
lib/main/src/: main.rs
lib/scene/: Cargo.toml
lib/scene/src/: deserialize.rs  json_schema.rs  lib.rs
lib/scene/src/camera/: mod.rs  perspective.rs
lib/scene/src/light/: directional.rs  mod.rs  point.rs
lib/scene/src/object/: csg.rs  cube.rs  cubic.rs  mod.rs  plane.rs  quadratic.rs  quadric.rs  sphere.rs  util.rs
lib/scene/src/object/model/: csg.rs  cube.rs  mod.rs  plane.rs  quadratic.rs  quadric.rs  quartic.rs  sphere.rs  util.rs
lib/scene/src/texture/: mod.rs  plain.rs
lib/schema-generator/: Cargo.toml  schema.json
lib/schema-generator/src/: main.rs
lib/types/: Cargo.toml
lib/types/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
scene/: Cargo.toml
scene/src/: lib.rs
scene/src/camera/: mod.rs  perspective.rs
scene/src/light/: mod.rs  point.rs
scene/src/object/: mod.rs  plane.rs  sphere.rs
scripts/: generate-schema.sh  usage.sh
types/src/: lib.rs
