[package]
name = "seui-engine-raytracing-csg-renderer-main"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
glam = "0.30.0"
image = "0.25.5"
json5 = "0.4.1"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde-hjson = "1.1.0"
serde_jsonc2 = "0.1.2"
serde_yaml = "0.9.34"
seui-engine-raytracing-csg-renderer-core = { version = "0.1.0", path = "../core" }
seui-engine-raytracing-csg-renderer-scene = { version = "0.1.0", path = "../scene" }
seui-engine-raytracing-csg-renderer-types = { version = "0.1.0", path = "../types" }
toml = "0.8.20"
