[package]
name = "seui-engine-raytracing-csg-renderer-schema-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "0.8.22", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
seui-engine-raytracing-csg-renderer-scene = { version = "0.1.0", path = "../scene" }
